# NLA_final

./: CMakeLists.txt  README.md  main.cpp
include/: BlockTridiag.hpp  HouseholderTridiag.hpp  TMatrix.hpp  TMatrix_base.hpp  TMatrix_ops.hpp  TMatrix_qr.hpp  eigenvectors.hpp  header.h  householderTridiag.hpp  randHermitian.hpp  testAll.hpp  testOne.hpp
src/: BlockTridiag.cpp  HouseholderTridiag.cpp  TMatrix.cpp  main.cpp
